@@ -5,6 +5,13 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 
 ##################################################################
 
+opsi-winst/opsi-script (4.12.0.19) stable; urgency=low
+
+  * osparser: new SearchForSectionLines
+  * osparser: SearchForSectionLines used in produceStringlist and doAktionen
+
+-- Detlef Oertel <d.oertel@uib.de>  Tue, 8 May 2018:15:00:00 +0200
+
 opsi-winst/opsi-script (4.12.0.18) stable; urgency=low
 
   * oslog: fix logging defined function that are included
